--- a/src/main/resources/static/web/assets/assetsStyles/index.css
+++ b/src/main/resources/static/web/assets/assetsStyles/index.css
@@ -37,7 +37,7 @@
 }
 
 
-@media(max-width: 768px){
+@media screen and (max-width: 1024px) {
     .hamburger{
         display: block;
     }
@@ -56,6 +56,46 @@
         position: fixed;
         left: -100%;
         top: 62px;
+        gap: 0;
+        flex-direction: column;
+        background-color: rgba(0, 57, 133, 0.894);
+        width: 100%;
+        text-align: start;
+        transition: 0.3s;
+    }
+
+    .nav-item{
+        padding: 16px 25px;
+        border-bottom: 1px solid #A5D6FF;
+        width: 100%;
+
+    }
+
+    .nav-menu.active{
+        left: 0;
+    }
+   
+}
+
+@media screen and (min-width: 1024px) {
+    .hamburger{
+        display: block;
+    }
+
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu{
+        position: fixed;
+        left: -100%;
+        top: 75px;
         gap: 0;
         flex-direction: column;
         background-color: rgba(0, 57, 133, 0.894);
