--- a/src/main/resources/static/web/assets/assetsStyles/style.css
+++ b/src/main/resources/static/web/assets/assetsStyles/style.css
@@ -13,3 +13,30 @@ a:active {
 .pp{
     color: red;
 }
+
+.transfer-form{
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    background-color: white;
+    padding: 15px;
+    width: 95%;
+    margin-bottom: 8rem;
+}
+
+@media only screen and (min-width: 600px) {
+    .transfer-form{
+        width: 80%;
+        padding: 20px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .transfer-form{
+        width: 60%;
+        margin-top: 3rem;
+    }
+}
