--- a/src/main/resources/static/web/assets/assetsStyles/styleCards.css
+++ b/src/main/resources/static/web/assets/assetsStyles/styleCards.css
@@ -41,7 +41,24 @@
 }
 
 
+.cards-form{
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    background-color: white;
+    padding: 15px;
+    width: 70%;
+    margin-bottom: 8rem;
+    
+}
 
+#label{
+   align-self: self-start; 
+}
 
 @font-face {
   font-family: 'cc font';
@@ -64,6 +81,13 @@
   50% {
     transform: rotateY(180deg);
   }
+}
+
+@media screen and (min-width: 768px) {
+  .cards-form{
+    width: 50%;
+  }
+  
 }
 
 
@@ -105,4 +129,7 @@
       left: 0;
   }
  
+  .cards-form{
+    width: 40%;
+  }
 }
