--- a/src/main/resources/static/web/assets/assetsStyles/loanApplication.css
+++ b/src/main/resources/static/web/assets/assetsStyles/loanApplication.css
@@ -45,11 +45,17 @@
     justify-items: center;
     background-color: white;
     padding: 2rem;
-    width: 95%;
+    width: 65%;
     margin-bottom: 6rem;
     margin-top: 2rem;
 }
 
+@media screen and (max-width: 768px) {
+    .loans-form{
+        width: 90%;
+    }
+    
+}
 
 @media screen and (min-width: 1024px) {
     .hamburger{
