--- a/src/main/resources/static/index1.css
+++ b/src/main/resources/static/index1.css
@@ -55,7 +55,7 @@
 }
 
 #service:hover {
-    background-position: 100% 60%;
+    background-position: 0 60%;
 }
 @media screen and (max-width: 1024px) {
     .hamburger{
